Some bugs that bugfinder pointed out.  That's actually ... Keywords: cscvs:MAIN-247
Author: dustin
Date: 2003/07/26 07:46:50

Some bugs that bugfinder pointed out.  That's actually a pretty decent
app.

imported from: dustin@spy.net--java/spyjar--sfcvs--1.0--patch-247